fix: block z-index error, screen resize error, change disableAnswerButton to disableBehavior

--- a/src/main/webapp/resources/lesson2/css/main.css
+++ b/src/main/webapp/resources/lesson2/css/main.css
@@ -1,3 +1,6 @@
+*{
+    user-select: none;
+}
 .scene_under_start .caption{
     padding-top: 15px;
     margin-bottom: 60px;
@@ -56,6 +59,9 @@
 .x-sign{
     background-image: url("../../images/XSign.png");
     width: 40px;
+}
+.draggable{
+    position:fixed;
 }
 .context--answer__blocks .block{
     position: absolute;
